tests/paczka1/fuzzy1/22460313.err
Error in line 7: aN3DjMHr S415 20,1
Error in line 9: aN3DjMHr S216 64,7
Error in line 13: 9dTy S216 51,1
Error in line 21: 9dTy A905 92,5
